# Paradigms

./: .gitignore  CMakeLists.txt  README.md
c/: WithoutDuplicates.cpp
cc++/: MaximumValue.cpp  PasswordMaker.cpp  PrimeMarried.cpp  TemperatureFilter.cpp
haskell/: Ith.hs  LogicOperation.hs  PerfectNumber.hs  PrimeMarried.hs  RepeatedWords.hs  UnionSet.hs
prolog/: Animals.pl  DeleteFirst.pl  KingOfGales.pl  PopulationDensities.pl  Reverts.pl  StudentSituation.pl  SumSet.pl
