cmake_minimum_required(VERSION 3.7)
project(Paradigms)

set(CMAKE_CXX_STANDARD 11)

add_executable(PrimeMarried PrimeMarried.cpp)
add_executable(MaximumValue MaximumValue.cpp)
add_executable(PasswordMaker PasswordMaker.cpp)
add_executable(WithoutDuplicates WithoutDuplicates.cpp)
add_executable(TemperatureFilter TemperatureFilter.cpp)
